// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 0 0 48px;
  -ms-flex: 0 0 48px;
  flex: 0 0 48px;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
}

<div
  class="rdt_TableCell c0"
>
  <input
    aria-label="select-row-456"
    name="select-row-456"
    style="font-size: 18px; cursor: pointer;"
    type="checkbox"
  />
</div>
`;

exports[`should render correctly if a selectableRowsComponent is provided 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 0 0 48px;
  -ms-flex: 0 0 48px;
  flex: 0 0 48px;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
}

<div
  class="rdt_TableCell c0"
>
  <div>
    hahah
  </div>
</div>
`;

exports[`should render correctly if a selectableRowsComponent is provided with selectableRowsComponentProps 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  padding-left: calc(48px / 6);
  padding-right: calc(48px / 6);
  padding-top: calc(48px / 12);
  padding-bottom: calc(48px / 12);
  -webkit-flex: 0 0 48px;
  -ms-flex: 0 0 48px;
  flex: 0 0 48px;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
}

<div
  class="rdt_TableCell c0"
>
  <div>
    hahah
  </div>
</div>
`;
